getting HTTP request

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 
     <input id="usernameinput" type="text">
     <button onclick="SubmitUserName()">submit</button>
-    
+
+    <img id="summonericon" src="" alt="player profile icon">
+    <h2 id="summonername"></h2>
+    <h3 id="summonerlevel"></h3>
+
 </body>
 </html>
