submit username, make request link

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <body>
     <h1>Hello world</h1>
 
-    <input id="usernameinput" type="text">
+    <input id="usernameinput" type="text" value="kamilix2003">
     <button onclick="SubmitUserName()">submit</button>
 
-    <img id="summonericon" src="" alt="player profile icon">
+    <img id="summonericon" src="" alt="">
     <h2 id="summonername"></h2>
     <h3 id="summonerlevel"></h3>
 
