--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 <link rel="stylesheet" href="index.css">
 <script src="index.js"></script>
 <body>
-    <h1>Hello world</h1>
+    <h1>Summoner data</h1>
 
     <input id="usernameinput" type="text" value="kamilix2003">
     <button onclick="SubmitUserName()">submit</button>
 
-    <img id="summonericon" src="" alt="">
     <h2 id="summonername"></h2>
     <h3 id="summonerlevel"></h3>
+    <img id="summonericon" src="" alt="">
 
 </body>
 </html>
