--- a/results.html
+++ b/results.html
@@ -8,7 +8,7 @@
 </head>
 <link rel="stylesheet" href="index.css" />
 <script src="index.js"></script>
-<body onload="SubmitUserName()">
+<body id="mainbody">
 <h2 id="summonername"></h2>
 <h3 id="summonerlevel"></h3>
 <img id="summonericon" src="" alt="" />
