api key from json

--- a/html/index.html
+++ b/html/index.html
@@ -6,12 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <link rel="stylesheet" href="index.css" />
-  <script src="index.js"></script>
+  <link rel="stylesheet" href="../css/index.css" />
   <body>
     <h1>Summoner data</h1>
 
-    <form id="selectregion" action="results.html">
+    <form id="selectregion" action="./results.html">
       <select name="region" id="region">
         <option value="EUN1">EUNE</option>
         <option value="EUW1">EUW</option>
@@ -26,5 +25,6 @@
     <img id="summonericon" src="" alt="" />
 
     <p id = "match history"></p>
+    <script src="../javascript/index.js" type="module"></script>
   </body>
 </html>
