added grid layout for results page

--- a/html/results.html
+++ b/html/results.html
@@ -1,22 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    
-</head>
-<link rel="stylesheet" href="../css/results.css" />
+  </head>
+  <link rel="stylesheet" href="../css/results.css" />
+  <body>
+    <h1 id="greeting">Hello summoner</h1>
+    <div class="grid-container">
+      <div class="grid-summonericon">
+        <img class="summonericon" src="" alt="" />
+      </div>
+      <div class="grid-summonerinfo">
+        <h2 class="summonername"></h2>
+        <h3 class="summonerlevel"></h3>
+        <div class="rank">
+          <h3 class="solo">solo</h3>
+          <h3 class="flex">flex</h3>
+        </div>
+      </div>
+      <div class="grid-matchhistory">
+        <p class="match history"></p>
+      </div>
+    </div>
 
-<body>
-<h1 id="greeting">Hello summoner</h1>
-<h2 id="summonername"></h2>
-<h3 id="summonerlevel"></h3>
-<img id="summonericon" src="" alt="" />
-
-<p id = "match history"></p>
-
-<script src="../javascript/results.js" type="module"></script>
-</body>
+    <script src="../javascript/results.js" type="module"></script>
+  </body>
 </html>
