--- a/html/results.html
+++ b/html/results.html
@@ -17,8 +17,8 @@
         <h2 class="summonername"></h2>
         <h3 class="summonerlevel"></h3>
         <div class="rank">
-          <h3 class="solo">solo</h3>
-          <h3 class="flex">flex</h3>
+          <h3 class="solo"></h3>
+          <h3 class="flex"></h3>
         </div>
       </div>
       <div class="grid-matchhistory">
