create match div for new matches

--- a/html/results.html
+++ b/html/results.html
@@ -22,7 +22,12 @@
         </div>
       </div>
       <div class="grid-matchhistory">
-        <p class="match history"></p>
+        <div class="match">
+          <img class="match-champ-img" src="" alt="">
+          <h3 class="match-champ">champ</h3>
+          <p class="match-date">date</p>
+          <p class="match-id">id</p>
+        </div>
       </div>
     </div>
 
