--- a/html/index.html
+++ b/html/index.html
@@ -16,15 +16,20 @@
         <option value="EUW1">EUW</option>
         <option value="NA1">NA</option>
       </select>
-      <input id="usernameinput" type="text" name="summonername" value="kamilix2003" />
+      <input
+        id="usernameinput"
+        type="text"
+        name="summonername"
+        value="kamilix2003"
+      />
       <button>submit</button>
-  </form>
+    </form>
 
     <h2 id="summonername"></h2>
     <h3 id="summonerlevel"></h3>
     <img id="summonericon" src="" alt="" />
 
-    <p id = "match history"></p>
+    <p id="match history"></p>
     <script src="../javascript/index.js" type="module"></script>
   </body>
 </html>
