--- a/html/results.html
+++ b/html/results.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Match History</title>
   </head>
   <link rel="stylesheet" href="../css/results.css" />
   <body>
@@ -22,7 +22,6 @@
         </div>
       </div>
       <div class="grid-matchhistory">
-
       </div>
     </div>
 
