chart.js working, timeline data

--- a/html/game.html
+++ b/html/game.html
@@ -6,10 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Match</title>
     <link rel="stylesheet" href="../css/game.css" />
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.1.1/dist/chart.umd.min.js"></script>
 </head>
 <body>
-    <h1>Match</h1>
-    
+    <div class="grid-container">
+        <div class="match-info-container">
+            <h1>Match</h1>
+        </div>
+        <div class="chart-container">
+            <canvas id="myChart"></canvas>
+        </div>        
+    </div>
+
+
+
+
     <script type="module" src="../javascript/game.js" ></script>
 </body>
 </html>
