--- a/html/results.html
+++ b/html/results.html
@@ -8,7 +8,7 @@
   </head>
   <link rel="stylesheet" href="../css/results.css" />
   <body>
-    <h1 id="greeting">Hello summoner</h1>
+    <a href="index.html"><h1 id="greeting">Hello summoner</h1></a>
     <div class="grid-container">
       <div class="grid-summonericon">
         <img class="summonericon" src="" alt="" />
