--- a/html/results.html
+++ b/html/results.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Match History</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,200;0,400;0,700;1,200;1,400&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <link rel="stylesheet" href="../css/results.css" />
   <body>
@@ -21,10 +27,11 @@
           <h3 class="flex"></h3>
         </div>
       </div>
-      <div class="grid-matchhistory">
-      </div>
+      <div class="grid-matchhistory"></div>
     </div>
-
+    <div class="footer">
+      <a href="https://gitlab.com/kachi_hi/it-project">GITLAB</a>
+    </div>
     <script src="../javascript/results.js" type="module"></script>
   </body>
 </html>
