--- a/html/index.html
+++ b/html/index.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="../css/index.css" />
   <body>
 <div class="parent">
-  <form id="input-summoner-info" action="./results.html">
+  <div id="input-summoner-info">
     <select name="region" id="region">
       <option value="EUN1">EUNE</option>
       <option value="EUW1">EUW</option>
@@ -27,9 +27,13 @@
       type="text"
       name="summonername"
       placeholder="Summoner name"
+      value="kamilix2003"
+      required
+      maxlength="16"
+      minlength="3"
     />
-    <button id="submitbtn">submit</button>
-  </form>
+    <button id="submitbtn">search</button>
+  </div>
 </div>
 <div class="footer">
   <a href="https://gitlab.com/kachi_hi/it-project">GITLAB</a>
