--- a/html/game.html
+++ b/html/game.html
@@ -24,6 +24,10 @@
       <div class="chart-container"></div>
     </div>
 
+    <div class="footer">
+      <a href="https://gitlab.com/kachi_hi/it-project">GITLAB</a>
+    </div>
+
     <script type="module" src="../javascript/game.js"></script>
   </body>
 </html>
