--- a/html/game.html
+++ b/html/game.html
@@ -15,9 +15,13 @@
     />
   </head>
   <body>
+    <div class="header">
+      <h1 id="date"></h1>
+    </div>
     <div class="grid-container">
       <div class="match-info-container">
-        <h1 id="matchid">Match</h1>
+        <div class="match-details">
+        </div>
       </div>
       <div class="match-summoners-container"></div>
       <div class="summoner-stats-container"></div>
