--- a/html/index.html
+++ b/html/index.html
@@ -14,6 +14,7 @@
   </head>
   <link rel="stylesheet" href="../css/index.css" />
   <body>
+    <div class="header"></div>
 <div class="parent">
   <div id="input-summoner-info">
     <select name="region" id="region">
