--- a/html/results.html
+++ b/html/results.html
@@ -14,7 +14,7 @@
   </head>
   <link rel="stylesheet" href="../css/results.css" />
   <body>
-    <a href="index.html"><h1 id="greeting">Hello summoner</h1></a>
+    <a href="index.html"><h1 class="header">Hello summoner</h1></a>
     <div class="grid-container">
       <div class="grid-summonericon">
         <img class="summonericon" src="" alt="" />
