root.css gold chart

--- a/html/results.html
+++ b/html/results.html
@@ -11,10 +11,13 @@
       href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,200;0,400;0,700;1,200;1,400&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="../css/root.css" />
+    <link rel="stylesheet" href="../css/results.css" />
   </head>
-  <link rel="stylesheet" href="../css/results.css" />
   <body>
-    <a href="index.html"><h1 class="header">Hello summoner</h1></a>
+    <div class="header">
+      <h1><a href="index.html">Hello summoner</a></h1>
+    </div>
     <div class="grid-container">
       <div class="grid-summonericon">
         <img class="summonericon" src="" alt="" />
