--- a/html/index.html
+++ b/html/index.html
@@ -11,8 +11,9 @@
       href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,200;0,400;0,700;1,200;1,400&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="../css/root.css">
+    <link rel="stylesheet" href="../css/index.css" />
   </head>
-  <link rel="stylesheet" href="../css/index.css" />
   <body>
     <div class="header"></div>
 <div class="parent">
