--- a/html/index.html
+++ b/html/index.html
@@ -22,6 +22,7 @@
       <option value="EUN1">EUNE</option>
       <option value="EUW1">EUW</option>
       <option value="NA1">NA</option>
+      <option value="KR">KR</option>
     </select>
     <input
       autocomplete="off"
