--- a/html/game.html
+++ b/html/game.html
@@ -29,9 +29,9 @@
       <div class="chart-container"></div>
     </div>
 
-    <div class="footer">
+    <footer class="footer">
       <a href="https://gitlab.com/kachi_hi/it-project">GITLAB</a>
-    </div>
+    </footer>
 
     <script type="module" src="../javascript/game.js"></script>
   </body>
