add remove select chart replace some grids => flax

--- a/html/game.html
+++ b/html/game.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Match</title>
     <link rel="stylesheet" href="../css/game.css" />
-    <link rel="stylesheet" href="../css/root.css">
+    <link rel="stylesheet" href="../css/root.css" />
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.1.1/dist/chart.umd.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -20,8 +20,7 @@
       <h1 id="date"></h1>
     </div>
     <div class="grid-container">
-      <div class="match-info-container">
-      </div>
+      <div class="match-info-container"></div>
       <div class="match-summoners-container"></div>
       <div class="summoner-stats-container"></div>
       <div class="chart-container"></div>
