--- a/html/results.html
+++ b/html/results.html
@@ -18,6 +18,7 @@
     <div class="header">
       <h1><a href="index.html">Hello summoner</a></h1>
     </div>
+    <button class="more-games">1 more game</button>
     <div class="grid-container">
       <div class="grid-summonericon">
         <img class="summonericon" src="" alt="" />
