button to load one more match

--- a/html/results.html
+++ b/html/results.html
@@ -16,22 +16,23 @@
   </head>
   <body>
     <div class="header">
-      <h1><a href="index.html">Hello summoner</a></h1>
     </div>
-    <button class="more-games">1 more game</button>
     <div class="grid-container">
-      <div class="grid-summonericon">
-        <img class="summonericon" src="" alt="" />
-      </div>
       <div class="grid-summonerinfo">
-        <h2 class="summonername"></h2>
-        <h3 class="summonerlevel"></h3>
-        <div class="rank">
-          <h3 class="solo"></h3>
-          <h3 class="flex"></h3>
+        <img class="summonericon" src="" alt="" />
+        <div>
+          <h2 class="summonername"></h2>
+          <h3 class="summonerlevel"></h3>
+          <div class="rank">
+            <h3 class="solo"></h3>
+            <h3 class="flex"></h3>
+          </div>
         </div>
       </div>
       <div class="grid-matchhistory"></div>
+    <div class="more-games-wraper">
+      <button class="more-games">load one more match</button>
+    </div>
     </div>
     <div class="footer">
       <a href="https://gitlab.com/kachi_hi/it-project">GITLAB</a>
