--- a/html/results.html
+++ b/html/results.html
@@ -37,6 +37,10 @@
     <div class="footer">
       <a href="https://gitlab.com/kachi_hi/it-project">GITLAB</a>
     </div>
+
+    <div class="loader-wrapper">
+      <p>Loading...</p>
+    </div>
     <script src="../javascript/results.js" type="module"></script>
   </body>
 </html>
