--- a/html/game.html
+++ b/html/game.html
@@ -30,6 +30,9 @@
       <a href="https://gitlab.com/kachi_hi/it-project">GITLAB</a>
     </footer>
 
+    <div class="loader-wrapper">
+      <p>Loading...</p>
+    </div>
     <script type="module" src="../javascript/game.js"></script>
   </body>
 </html>
