--- a/html/index.html
+++ b/html/index.html
@@ -40,6 +40,10 @@
 <div class="footer">
   <a href="https://gitlab.com/kachi_hi/it-project">GITLAB</a>
 </div>
+
+    <div class="loader-wrapper">
+      <p>Loading...</p>
+    </div>
     <script src="../javascript/index.js" type="module"></script>
   </body>
 </html>
