--- a/html/results.html
+++ b/html/results.html
@@ -16,6 +16,7 @@
   </head>
   <body>
     <div class="header">
+      <h1><a href="index.html">Hello summoner</a></h1>
     </div>
     <div class="grid-container">
       <div class="grid-summonerinfo">
