--- a/html/index.html
+++ b/html/index.html
@@ -15,7 +15,9 @@
     <link rel="stylesheet" href="../css/index.css" />
   </head>
   <body>
-    <div class="header"></div>
+    <div class="header">
+      <h1>willump.lol</h1>
+    </div>
 <div class="parent">
   <div id="input-summoner-info">
     <select name="region" id="region">
