--- a/html/results.html
+++ b/html/results.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <div class="header">
-      <h1><a href="index.html">Hello summoner</a></h1>
+      <h1><a href="https://willump.lol">willump.lol</a></h1>
     </div>
     <div class="grid-container">
       <div class="grid-summonerinfo">
