adding match stats to db

--- a/html/results.html
+++ b/html/results.html
@@ -28,6 +28,10 @@
             <h3 class="solo"></h3>
             <h3 class="flex"></h3>
           </div>
+          <div class="stats">
+            <h3 class="wins"></h3>
+            <p class="kda"></p>
+          </div>
         </div>
       </div>
       <div class="grid-matchhistory"></div>
