--- a/html/index.html
+++ b/html/index.html
@@ -11,6 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,200;0,400;0,700;1,200;1,400&display=swap"
       rel="stylesheet"
     />
+    <script src="https://kit.fontawesome.com/b71fb7396c.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/root.css">
     <link rel="stylesheet" href="../css/index.css" />
   </head>
@@ -40,7 +41,7 @@
   </div>
 </div>
 <div class="footer">
-  <a href="https://gitlab.com/kachi_hi/it-project">GITLAB</a>
+  <a href="https://gitlab.com/kachi_hi/it-project"><i class="fa-solid fa-code"></i> GITLAB</a>
 </div>
 
     <div class="loader-wrapper">
