--- a/html/game.html
+++ b/html/game.html
@@ -14,6 +14,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,200;0,400;0,700;1,200;1,400&display=swap"
       rel="stylesheet"
     />
+    <script src="https://kit.fontawesome.com/b71fb7396c.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div class="header">
@@ -26,7 +27,7 @@
     </div>
 
     <footer class="footer">
-      <a href="https://gitlab.com/kachi_hi/it-project">GITLAB</a>
+      <a href="https://gitlab.com/kachi_hi/it-project"><i class="fa-solid fa-code"></i> GITLAB</a>
     </footer>
 
     <div class="loader-wrapper">
